// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinderList should match snapshot 1`] = `
<div class="list">
  <div role="button" draggable="false" tabindex="0" class="item">
    <!---->
    <!---->
    <div item="[object Object]" class="inner-item">Test 11</div>
    <div class="arrow"></div>
  </div>
  <div role="button" draggable="false" tabindex="-1" class="item">
    <!---->
    <!---->
    <div item="[object Object]" class="inner-item">Test 12</div>
    <!---->
  </div>
</div>
`;

exports[`FinderList should match snapshot if \`dragEnabled\` is true 1`] = `
<div class="list">
  <div class="drop-zone"></div>
  <div role="button" draggable="true" tabindex="0" class="item draggable">
    <!---->
    <!---->
    <div item="[object Object]" class="inner-item">Test 11</div>
    <div class="arrow"></div>
  </div>
  <div class="drop-zone"></div>
  <div role="button" draggable="true" tabindex="-1" class="item draggable">
    <!---->
    <!---->
    <div item="[object Object]" class="inner-item">Test 12</div>
    <!---->
  </div>
  <div class="drop-zone last"></div>
</div>
`;

exports[`FinderList should match snapshot if \`selectable\` is true 1`] = `
<div class="list">
  <div role="button" draggable="false" tabindex="0" class="item">
    <!----> <input type="checkbox" aria-label="Test 11">
    <div item="[object Object]" class="inner-item">Test 11</div>
    <div class="arrow"></div>
  </div>
  <div role="button" draggable="false" tabindex="-1" class="item">
    <!----> <input type="checkbox" aria-label="Test 12">
    <div item="[object Object]" class="inner-item">Test 12</div>
    <!---->
  </div>
</div>
`;

exports[`FinderList should match snapshot if no item 1`] = `<div class="list"></div>`;
